# IoT-Protocol-Comparison

./: METHODOLOGY.md  README.md  REPRODUCIBILITY.md
data-analysis/: create_visualizations.py  matter_research_data.csv  protocol_analyzer.py
lwm2m-project/arduino-code/real_lwm2m_client/: real_lwm2m_client.ino
lwm2m-project/server/: Californium3.server.properties
matter-project/rs-matter-client/: Cargo.toml
matter-project/rs-matter-client/src/: main.rs
matter-project/tools/: simple-matter-server.py
pico_test/: CMakeLists.txt  blink.c
